# prisma-desk

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: main.yml  updater.yml
src-tauri/: Cargo.toml  macos-info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/core/: lib.rs  main.rs  torrserver.rs
src-tauri/icons/: icon.icns
src-tauri/module/: bridge.js  client-inject.js
src-tauri/shared/models/: app.rs  common.rs  mod.rs  process.rs
src-tauri/shared/services/: mod.rs  proxy.rs  store.rs  torrserver.rs
